# ATS

./: README.md
ats1819-log-generator/: ats1819.cabal  stack.yaml
ats1819-log-generator/src/: CodigosPostais.hi  CodigosPostais.hs  Main  Main.hi  Main.hs  Nomes.hi  Nomes.hs  Utils.hi  Utils.hs
projecto/: log.txt  makefile  pom.xml  umerData-tests
projecto/src/java/: ATS.java  ATSLexer.java  ATSListener.java  Bike.java  Car.java  Client.java  Company.java  CustomProbabilisticDistribution.java  DeviationComparator.java  Driver.java  Helicopter.java  MoneyComparatorC.java  MoneyComparatorD.java  RatingComparator.java  UMeR.java  Van.java  Vehicle.java
rapl/refactor/: umerData-tests
rapl/refactor/Java/: ATS.tokens  ATSBaseListener.java  ATSParser.java  Bike.java  Car.java  Client.java  Company.java  DeviationComparator.java  Driver.java  EnergyCheckUtils.java  GUI.java  Helicopter.java  Makefile  MoneyComparatorC.java  MoneyComparatorD.java  RatingComparator.java  Trip.java  UMeR.java  User.java  Van.java  Vehicle.java  log.txt  umerData-tests
rapl/refactor/antlr4/: ATS.g4
report/: Apresentação.pptx  pmd.html
report/OpenClover/: agg-pkgs.html  dashboard.html  index.html  package-nodes-tree.js  pkg-summary.html  project.js  quick-wins.html  test-pkg-summary.html  testsrc-agg-pkgs.html  testsrc-pkg-summary.html  top-risks.html  treemap-dash-json.js  treemap-json.js  treemap.html
report/OpenClover/default-pkg/: Bike.html  Bike.js  BikeTest.html  BikeTest.js  BikeTest_test0_a1.html  BikeTest_test1_7g.html  BikeTest_test2_44.html  BikeTest_test3_4c.html  Car.html  (+791 more)
(+31 files in other folders)
