name:                ats1819
version:             0.1.0.0
synopsis:            Geração de casos de teste para o projecto de ATS 2018/2019.
license:             MPL-2.0
license-file:        LICENSE
author:              Jorge Mendes
maintainer:          jorgemendes@di.uminho.pt
copyright:           © 2018 Jorge Mendes
build-type:          Simple
cabal-version:       >=1.10

executable ats-gen
  main-is:
      Main.hs
  other-modules:
      CodigosPostais
      Nomes
      Utils
  build-depends:
      base >=4.11 && <4.12
    , containers
    , mtl
    , QuickCheck
    , time
  hs-source-dirs:
    src
  default-language:
      Haskell2010
